# jobquest

./: .gitignore  LICENSE  README.md  setup.sh
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/jobquest-analyze-profile/: SKILL.md
.claude/skills/jobquest-build-cover-letter/: SKILL.md
.claude/skills/jobquest-build-resume/: SKILL.md
.claude/skills/jobquest-fetch-job/: SKILL.md
.claude/skills/jobquest-fetch-jobs/: SKILL.md
.claude/skills/jobquest-find-careers-url/: SKILL.md
.claude/skills/jobquest-init/: SKILL.md
.claude/skills/jobquest-match-jobs/: SKILL.md
.claude/skills/jobquest-prep-interview/: SKILL.md
.claude/skills/jobquest-shared-tools/: pyproject.toml
.claude/skills/jobquest-shared-tools/references/: preferences_schema.md
.claude/skills/jobquest-shared-tools/src/: __init__.py  fetch_application_questions.py  fetch_jobs.py  fetch_single_job.py  find_careers_page.py  models.py  scrapers.py
.claude/skills/jobquest-track-application/: SKILL.md
.claude/skills/jobquest-track-application/assets/: timeline_template.yaml
.claude/skills/jobquest-track-application/assets/job-application-template/: README.md  job-description.md
.claude/skills/jobquest-track-application/assets/job-application-template/communications/: README.md
.claude/skills/jobquest-track-application/references/: timeline_schema.md
configs/: CLAUDE.md  companies.example.yaml  job_boards.example.yaml  preferences.example.yaml
