[project]
name = "job-searcher"
version = "0.1.0"
description = "Job scraping and searching tools for the job-searcher skill"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.48.0",
    "httpx>=0.27.0",
    "msgspec>=0.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
